package com.example.deco.model;

import javafx.scene.canvas.GraphicsContext;

public interface ChristmasTree
{
    void operation (GraphicsContext gr);
}
