@startuml

title __MODEL's Class Diagram__\n

  namespace com.example.deco {
      namespace model {
        interface com.example.deco.model.ChristmasTree {
            {abstract} + operation()
        }
      }
    }
  

  namespace com.example.deco {
      namespace model {
        class com.example.deco.model.Girlanda {
            + Girlanda()
            + operation()
            - drawGirlanda()
        }
      }
    }
  

   namespace com.example.deco {
      namespace model {
        class com.example.deco.model.Present {
            + Present()
            + operation()
            - drawPresent()
        }
      }
    }
  

   namespace com.example.deco {
      namespace model {
        class com.example.deco.model.Star {
            + Star()
            + operation()
            - drawStar()
        }
      }
    }
  

   namespace com.example.deco {
      namespace model {
        abstract class com.example.deco.model.TreeDecorator {
            + TreeDecorator()
            + operation()
        }
      }
    }
  

  com.example.deco.model.Girlanda -up-|> com.example.deco.model.TreeDecorator
  com.example.deco.model.Present -up-|> com.example.deco.model.TreeDecorator
  com.example.deco.model.Star -up-|> com.example.deco.model.TreeDecorator
  com.example.deco.model.TreeDecorator .up.|> com.example.deco.model.ChristmasTree
  com.example.deco.model.TreeDecorator o-- com.example.deco.model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
